public/stylesheets/application.css
/**
 * 25.05.2010 (Initial creation)
 * 26.07.2010 (Correct paths and insert raki styles)
 * 07.02.2011 (visited link color; changed header/footer id to html5 header/footer tags)
 * 23.06.2011 (Reorder teh cables and pimp up the content)
 *
 * Aaron Mueller <http://aaron-mueller.de/>
 * Ruben Mueller <http://purzwei.de/>
 */

body {
	position: relative;
	width: 910px;
	left: 10px;
}

img#cables_ccc, img#cables {
	position: absolute;
	right: 30px;
	top: 45px;
  z-index: 100;
}
img#cables {
	right: -158px;
}

a#logo img {
	margin: 15px 0 0 25px;
	display: block;
	line-height: 0 !important; /* fix for blueprint overwrite */
}
a#rss {
  float: right;
  position: relative;
  top: -70px;
  right: 30px;
}

header {
	height: 38px;
	background: transparent url(../images/header_bg.png) no-repeat;
	padding-right: 170px;
	text-align: right;
}
  header a, header a:visited {
    font-size: 1.1em;
    text-decoration: none;
    color: white;
    margin: 10px 0 10px 20px;
    display: inline-block;
  }

div#content {
	background: transparent url(../images/content_bg.png) repeat-y;
}
	div#content div.canvas {
		margin: 0 30px 0 30px;
		background-color: white;
    position: relative;
	}

article {
	width: 610px;
	padding: 15px 25px 15px 0;
	float: right;
  position: relative;
  display: block;
  font: 1.1em helvetica,arial,freesans,clean;
}
  article img {
    border: 1px solid #cfcfcf;
    padding: 2px;
    margin: 10px;
    background-color: #fafafa;
  }
  article img.right { float: right; margin-right: 0;}
  article img.center { display: block; margin-left: auto; margin-right: auto; }
  article img.left { float: left; margin-left: 0;}
  
  article a.active {
    font-weight: bold;
  }
  h1#header_path {
    color: #eee;
    font-size: 2.3em;
    position: absolute;
    left: 210px;
    top: 15px;
  }
  
  article h1 {
  
  }
  article h2 {
    border-bottom: 1px solid #ccc;
    margin-bottom: 7px;
    font-size: 18px;
  }
  article h3 {
    font-size: 16px;
    font-weight: bold;
  }
  
  article ul {
    list-style-type: square;
    margin: 0;
  }
  article ul li {
    margin-bottom: 6px;
  }
  article ul {
    margin-top: 10px;
  }
  article a, footer a {
    color: #4183C4;
  }
  article a:link, footer a:link { text-decoration: none; }
  article a:hover, article a:visited, footer a:hover {
    text-decoration: underline;
    color: #4183C4;
  }


nav#navigation {
	background: transparent url(../images/navigation_bg.jpg) repeat-x;
	padding-top: 10px;
	margin: 0 0 30px 0;
	width: 190px;
	float: left;
}
	  nav#navigation ul {
		  margin: 0 0 30px 0;
		  padding: 0;
		  list-style: none;
	  }
	  
			nav#navigation ul li a:link,
			nav#navigation ul li a:visited {
				margin: -3px 0 0 -5px;
				width: 195px;
				height: 32px;
				background: transparent url(../images/navigation_entry_bg.png) no-repeat;
				display: block;
				text-decoration: none;
				font-size: 1.1em;
				color: black;
			}
			
			nav#navigation ul li a:hover,
			nav#navigation ul li a:active {
				background: transparent url(../images/navigation_entry_hover_bg.png) no-repeat;
			}
				nav#navigation ul li a span {
					display: block;
					padding: 8px 0 0 20px;
				}
				
			nav#navigation ul li.selected a:link,
			nav#navigation ul li.selected a:visited {
				color: white;
				background: transparent url(../images/navigation_entry_selected_bg.png) no-repeat;
			}
			
			nav#navigation ul li:first-child a:link,
			nav#navigation ul li:first-child a:visited {
				margin: 0px 0 0 -5px;
				height: 32px;
				padding-top: 4px;
				background: transparent url(../images/navigation_entryfirst_bg.png) no-repeat;
			}
			
			nav#navigation ul li:first-child a:hover,
			nav#navigation ul li:first-child a:active {
				background: transparent url(../images/navigation_entryfirst_hover_bg.png) no-repeat;
			}
			
			nav#navigation ul li:first-child.selected a:link,
			nav#navigation ul li:first-child.selected a:visited {
				background: transparent url(../images/navigation_entryfirst_selected_bg.png) no-repeat;
			}
				nav#navigation ul li.first a span {
					padding: 12px 0 0 20px;
				}

footer {
	padding: 10px 55px 10px 245px;
	font-size: .8em;
	color: #888;
	text-align: right;
	background: transparent url(../images/footer_bg.png) no-repeat;
  margin-bottom: 20px;
}

#auth_username {
    margin-left: 40px !important;
    padding-left: 20px;
    background: url(../images/user.png) no-repeat;
}

div#login {
  width: 250px;
}

